bugs/tests/fuzz-05-18-13-21-59/r_45_r_177_issue3616_F10_P177_7_M0.stderr
likely_hits/r_45_r_177_issue3616_F10_P177_7_M0.p4(1): [--Werror=type-error] error: tuple<>: cast not supported
enum bit<4> e { a = 0, b = 0, c = ((tuple<>) (a)), d = a };
                                    ^^^^^^^
In file: /p4c/frontends/p4/typeChecking/typeChecker.cpp:172
Compiler Bug: /p4c/frontends/p4/typeChecking/typeChecker.cpp:172: Null srcType

